--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 !/.projen/deps.json
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
-!/.github/workflows/stale.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -47,7 +46,10 @@ junit.xml
 !/.github/workflows/release.yml
 !/.github/workflows/release-cdkv1.yml
 !/.mergify.yml
+!/.github/workflows/upgrade-main.yml
+!/.github/workflows/upgrade-cdkv1.yml
 !/.github/pull_request_template.md
+!/.npmrc
 !/test/
 !/tsconfig.dev.json
 !/src/
@@ -58,5 +60,3 @@ junit.xml
 tsconfig.json
 !/API.md
 !/.nvmrc
-!/.github/workflows/upgrade-main.yml
-!/.github/workflows/upgrade-cdkv1.yml
