--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
     "release": "npx projen release",
     "release:cdkv1": "npx projen release:cdkv1",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
-    "upgrade-projen": "npx projen upgrade-projen",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
@@ -41,31 +39,36 @@
   },
   "devDependencies": {
     "@types/github-username-regex": "^1.0.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^27",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.24.1",
+    "aws-cdk-lib": "2.89.0",
     "constructs": "10.0.0",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^27.5.1",
-    "jest-junit": "^13",
-    "jsii": "^1.70.0",
-    "jsii-diff": "^1.70.0",
+    "eslint-plugin-import": "^2.28.0",
+    "jest": "^27",
+    "jest-junit": "^15",
+    "jsii": "1.x",
+    "jsii-diff": "^1.86.1",
     "jsii-docgen": "^3.8.31",
-    "json-schema": "^0.4.0",
-    "npm-check-updates": "^12",
-    "projen": "^0.52.43",
+    "jsii-pacmak": "^1.86.1",
+    "jsii-rosetta": "1.x",
+    "npm-check-updates": "^16",
+    "projen": "^0.71.161",
     "standard-version": "^9",
-    "ts-jest": "^27.1.5",
-    "typescript": "^4.8.4"
+    "ts-jest": "^27",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.24.1",
+    "aws-cdk-lib": "^2.89.0",
     "constructs": "^10.0.0"
+  },
+  "overrides": {
+    "@types/babel__traverse": "7.18.2",
+    "@types/prettier": "2.6.0"
   },
   "keywords": [
     "aws",
@@ -87,7 +90,7 @@
   "jest": {
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
